专业/ANTLR4 权威指南/examples/calculator/LabeledPython/LabeledExpr.g4
grammar LabeledExpr;               
prog: stat+ ;
stat: expr NEWLINE         # printExpr
    | ID '=' expr NEWLINE  # assign
    | NEWLINE              # blank
    ;
expr: expr ('*'|'/') expr  # Muldiv
    | expr ('+'|'-') expr  # AddSub
    | INT                  # int
    | ID                   # id
    | '(' expr ')'         # parens
    ;
ID  : [a-zA-Z]+;
INT : [0-9]+ ;
NEWLINE : '\r'? '\n';
WS: [ \t]+ -> skip;
